vbnc/vbnc/tests/Errors/30129.vb
<Assembly: System.Reflection.AssemblyVersion("1.0a.*")> 

Class E
    Shared Sub Main()

    End Sub
End Class